--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "angular-cookies": "~1.4.1",
     "angular-material": "^0.11.1",
     "angular-route": "~1.3.16",
-    "ui-router": "0.2.15",
+    "ui-router": "1.0.0-alpha0",
     "angular-messages": "~1.5.0",
     "gulp": "~3.9.1",
     "lodash": "~4.5.0",
