--- a/package.json
+++ b/package.json
@@ -1,40 +1,50 @@
 {
-  "name": "quest-jose",
-  "version": "0.0.1-SNAPSHOT",
-  "description": "Quest projects",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://slurmf@bitbucket.org/slurmf/quiz.git"
-  },
-  "keywords": [
-    "cordova",
-    "javascript"
-  ],
-  "author": "slurmf@gmail.com",
-  "license": "ISC",
-  "dependencies": {
-    "angular": "^1.3.15",
-    "angular-animate": "^1.3.15",
-    "angular-aria": "^1.3.15",
-    "angular-cookies": "~1.4.1",
-    "angular-material": "^0.11.1",
-    "angular-route": "~1.3.16",
-    "ui-router": "1.0.0-alpha0",
-    "angular-messages": "~1.5.0",
-    "gulp": "~3.9.1",
-    "lodash": "~4.5.0",
-    "browserify": "~13.0.0"
-  },
-  "devDependencies": {
-    "chai": "^2.3.0",
-    "chai-as-promised": "^5.0.0",
-    "mocha": "^2.2.4",
-    "gulp": "^3.9.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-template": "^3.0.0"
-  }
+    "name": "quest-jose",
+    "version": "0.0.1-SNAPSHOT",
+    "description": "Quest projects",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://slurmf@bitbucket.org/slurmf/quiz.git"
+    },
+    "keywords": [
+        "cordova",
+        "javascript"
+    ],
+    "author": "slurmf@gmail.com",
+    "license": "ISC",
+    "dependencies": {
+        "angular": "^1.3.15",
+        "angular-animate": "^1.3.15",
+        "angular-aria": "^1.3.15",
+        "angular-cookies": "~1.4.1",
+        "angular-material": "^0.11.1",
+        "angular-messages": "~1.5.0",
+        "angular-route": "~1.3.16",
+        "browserify": "~13.0.0",
+        "cordova-browser": "^4.1.0",
+        "cordova-plugin-whitelist": "^1.3.2",
+        "gulp": "~3.9.1",
+        "lodash": "~4.5.0",
+        "ui-router": "1.0.0-alpha0"
+    },
+    "devDependencies": {
+        "chai": "^2.3.0",
+        "chai-as-promised": "^5.0.0",
+        "mocha": "^2.2.4",
+        "gulp": "^3.9.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-template": "^3.0.0"
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-whitelist": {}
+        },
+        "platforms": [
+            "browser"
+        ]
+    }
 }
